tests/baselines/reference/lambdaPropSelf.errors.txt
==== tests/cases/compiler/lambdaPropSelf.ts (1 errors) ====
    declare var ko: any;
    
    class Person {
        children: string[];
    
        constructor (public name: string, children: string[]) {
            this.children = ko.observableArray(children);
        }
    
        addChild = () => this.children.push("New child");
    }
    
    
    class T {
         fo() {
            var x = this;
        }
    }
    
    module M {
        var x = this;
                ~~~~
!!! lambdaPropSelf.ts(21,13): error TS2108: 'this' cannot be referenced within module bodies.
    }
    